--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -32,6 +32,9 @@
         <item name="android:textSize">@dimen/text_size_small</item>
         <item name="android:color">@android:color/holo_red_light</item>
     </style>
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:windowBackground">@drawable/splash_activity_draw</item>
+    </style>
 
 
 </resources>
