исправлена работа ретрофита

--- a/app/src/main/res/layout/activity_weather_description.xml
+++ b/app/src/main/res/layout/activity_weather_description.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".WeatherDescription">
+    tools:context=".screens.weather.WeatherDescription">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarWeatherDescr"
