--- a/app/src/main/res/layout/layout_for_cities.xml
+++ b/app/src/main/res/layout/layout_for_cities.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/margin_small"
-    app:cardCornerRadius="@dimen/common_margin">
+    app:cardCornerRadius="@dimen/common_margin"
+    >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
