--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,12 +56,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:rippleColor="@color/orange_dark"
+                android:padding="@dimen/margin_small"
                 android:layout_gravity="center"
                 android:textSize="@dimen/text_size_small"
                 android:fontFamily="@font/alice"
                 android:layout_marginBottom="@dimen/common_margin"
                 app:cornerRadius="@dimen/common_margin"
                 android:text="@string/show_button">
+
+            </com.google.android.material.button.MaterialButton>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_map"
+                android:padding="@dimen/margin_small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:rippleColor="@color/orange_dark"
+                android:layout_gravity="center"
+                android:textSize="@dimen/text_size_small"
+                android:fontFamily="@font/alice"
+                android:layout_marginBottom="@dimen/common_margin"
+                app:cornerRadius="@dimen/common_margin"
+                android:text="Перейти в карты">
 
             </com.google.android.material.button.MaterialButton>
 
