--- a/app/src/main/res/layout/activity_weather_description.xml
+++ b/app/src/main/res/layout/activity_weather_description.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
-        android:background="@color/green"/>
+        android:background="?attr/colorPrimary"/>
 
 
     <FrameLayout
@@ -26,7 +26,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="@dimen/common_margin"
-        android:background="@color/green"
+        android:background="?attr/itemBackground"
         android:id="@+id/recycleView_for_week_weather"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
