--- a/app/src/main/res/drawable-v24/ring.xml
+++ b/app/src/main/res/drawable-v24/ring.xml
@@ -6,7 +6,8 @@
         android:height="50dp" />
 
 
+
     <stroke
         android:width="12dp"
-        android:color="@color/orange_light" />
+        android:color="#009faf" />
 </shape>
