--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
             android:hint="@string/enter_city"
             android:orientation="vertical"
             app:errorEnabled="true"
+            android:elevation="@dimen/margin_small"
             app:layout_constraintEnd_toStartOf="@+id/button_show"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/app_bar">
@@ -57,8 +58,10 @@
                 android:layout_height="wrap_content"
                 app:rippleColor="@color/orange_dark"
                 android:padding="@dimen/margin_small"
+                app:icon="@drawable/ic_baseline_search_24"
                 android:layout_gravity="center"
                 android:textSize="@dimen/text_size_small"
+                android:elevation="@dimen/margin_small"
                 android:fontFamily="@font/alice"
                 android:layout_marginBottom="@dimen/common_margin"
                 app:cornerRadius="@dimen/common_margin"
@@ -66,61 +69,14 @@
 
             </com.google.android.material.button.MaterialButton>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/button_map"
-                android:padding="@dimen/margin_small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:rippleColor="@color/orange_dark"
-                android:layout_gravity="center"
-                android:textSize="@dimen/text_size_small"
-                android:fontFamily="@font/alice"
-                android:layout_marginBottom="@dimen/common_margin"
-                app:cornerRadius="@dimen/common_margin"
-                android:text="Перейти в карты">
-
-            </com.google.android.material.button.MaterialButton>
-
         </com.google.android.material.textfield.TextInputLayout>
-        <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/frame_for_favourites"
-            android:layout_width="match_parent"
-            android:layout_margin="@dimen/common_margin"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@drawable/krug_ugly">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/addToFavourites"
-                style="@style/my_text"
-                android:textSize="@dimen/text_size_small"
-                android:textAlignment="center"/>
-
-                <ImageView
-                    android:id="@+id/image_delete_all"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="end"
-                    android:padding="5dp"
-                    android:src="@drawable/ic_baseline_delete_24"
-                    android:background="@drawable/circle"
-                    />
-
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycleView_for_favourites_city"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
-
-            </androidx.recyclerview.widget.RecyclerView>
-
-        </LinearLayout>
-
+<fragment
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/common_margin"
+    android:name="ru.alinadorozhkina.gbweatherapp.fragments.FavouritesFragment"
+    tools:layout="@layout/fragment_favourites"/>
 
     </LinearLayout>
 
@@ -130,6 +86,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        android:background="@color/white"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
 
