--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,8 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/textview_day_of_the_week"
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/text_size_small"
         android:textStyle="bold"
+        android:layout_weight="1"
         android:layout_margin="@dimen/margin_small"
         android:textColor="@color/white"
         android:fontFamily="@font/alice">
@@ -19,7 +20,8 @@
         android:id="@+id/textview_day_temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:gravity="center"
         android:textSize="@dimen/text_size_average"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -30,6 +32,8 @@
         android:id="@+id/image_view_for_weather"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:foregroundGravity="right"
         android:contentDescription="@string/image"
         android:layout_gravity="center">
 
