--- a/app/src/main/res/layout/layout_for_cities.xml
+++ b/app/src/main/res/layout/layout_for_cities.xml
@@ -6,11 +6,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/margin_small"
     app:cardCornerRadius="@dimen/common_margin"
+    app:cardElevation="@dimen/margin_small"
     >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/green">
+        android:background="?attr/colorPrimary">
         <TextView
             android:id="@+id/textView_favourite_city"
             style="@style/my_text"
