--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_200">#7c43bd</color>
+    <color name="purple_500">#4a148c</color>
+    <color name="purple_700">#12005e</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#43A047</color>
-    <color name="orange_dark">#EF6C00</color>
-    <color name="orange_light">#FF9800</color>
+    <color name="green">#ffab00</color>
+    <color name="orange_dark">#E65100</color>
+    <color name="orange_light">#FFA726</color>
     <color name="orange">#F57C00</color>
     <color name="grey">#706A64</color>
+    <color name="yellow">#ffc400</color>
+    <color name="dart_blue">#009faf</color>
+    <color name="dark_orange">#c43e00</color>
+    <color name="blue">#4dd0e1</color>
 </resources>
