--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.GBWeatherApp" parent="Theme.MaterialComponents.Light">
-        <item name="android:itemBackground">@color/green</item>
-        <item name="android:windowBackground">@color/orange_dark</item>
+        <item name="colorSurface">@color/blue</item>
+        <item name="itemBackground">@color/green</item>
+        <item name="android:windowBackground">@color/dart_blue</item>
         <item name="snackbarTextViewStyle">@style/my_snackbar_text_style</item>
         <item name="colorPrimary">@color/green</item>
         <item name="colorPrimaryDark">@color/black</item>
@@ -20,11 +21,16 @@
     </style>
 
     <style name="AppDarkTheme" parent="Theme.MaterialComponents">
+        <item name="android:textViewStyle">@style/my_text</item>
+        <item name="snackbarTextViewStyle">@style/my_snackbar_text_style</item>
+        <item name="alertDialogTheme">@style/AlertDialog</item>
+        <item name="colorSurface">@color/purple_200</item>
+        <item name="itemBackground">@color/purple_200</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:windowBackground">@color/black</item>
+        <item name="android:windowBackground">@drawable/starback3</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimary">@color/purple_700</item>
         <item name="colorOnSecondary">@color/white</item>
     </style>
 
