сделана версия фри и про. Различие в доступе к map

--- a/app/src/main/res/drawable-v24/ring.xml
+++ b/app/src/main/res/drawable-v24/ring.xml
@@ -9,5 +9,5 @@
 
     <stroke
         android:width="12dp"
-        android:color="#009faf" />
+        android:color="?attr/colorSecondaryVariant" />
 </shape>
