--- a/app/src/main/res/layout/layout_weather_description.xml
+++ b/app/src/main/res/layout/layout_weather_description.xml
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_small"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="@color/orange_dark"
         app:layout_anchor="@id/bottomAppBar"
         app:srcCompat="@drawable/ic_baseline_add_24" />
 
