--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -18,7 +18,8 @@
         <item name="android:colorAccent">@android:color/holo_red_light</item>
         <item name="android:textColorPrimary">@color/black</item>
         <item name="android:textSize">@dimen/text_size_small</item>
-        <item name="android:windowBackground">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:windowBackground">@color/orange_light</item>
         <item name="buttonBarPositiveButtonStyle">@style/Dialog_Button</item>
         <item name="android:windowTitleStyle">@style/DialogTitle</item>
 
