--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,7 @@
         <item name="android:textViewStyle">@style/my_text</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/green</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="alertDialogTheme">@style/AlertDialog</item>
         <item name="windowActionBar">false</item>
@@ -32,6 +32,8 @@
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorPrimary">@color/purple_700</item>
         <item name="colorOnSecondary">@color/white</item>
+        <item name="colorSecondary">@color/purple_700</item>
+        <item name="colorSecondaryVariant">@color/purple_700</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
