--- a/app/src/pro/res/menu/activity_main_drawer.xml
+++ b/app/src/pro/res/menu/activity_main_drawer.xml
@@ -8,7 +8,8 @@
         <item
             android:id="@+id/go_to_map"
             android:title="@string/go_to_map"
-            android:icon="@drawable/ic_baseline_map_24"/>
+            android:icon="@drawable/ic_baseline_map_24"
+            />
 
         <item
             android:id="@+id/write_to_developer"
